syntax = "proto3";

package bookstore;
option go_package="/bookstore_pb";


message Book {
  string bookId = 1;
  string author = 2;
  string bookname = 3;
  string title = 4;
}

message updateBookRequest {
  string author = 2;
  string bookname = 3;
  string title = 4;
}

message BooksRequest {
   Book books = 1;
}

message ID{
  string BookID =1;
}

message response {
  
  string message = 1;
}

message PageInfoRequest{
  string pageNumber =1;
  string BookID=2;
  string Pagesize =3;
  string pagecontent =4;
}
message pagerequest{

  int64 pgagenumber=1;
  int64 pagesize=2; 
}


message input{
  oneof request{
    string search =1;
    string bookid=2;
  
  }

}
message streamresponse{
  oneof resp{
    string errormsg=1; 
    Book bookrResp =2 ;
  }
  
}


service Bookstore {
  rpc CreateBook (BooksRequest) returns (ID) { };
  rpc DeleteBook (ID) returns (response) { };
  rpc GetBook (ID) returns ( Book ) {};
  rpc Upatebook(updateBookRequest) returns (response){};
  rpc PutContent(stream PageInfoRequest ) returns (response);
  rpc GetContent(pagerequest) returns(stream Book);
  rpc GetBookdetails(stream input) returns( stream streamresponse);
}
